@@ -13,10 +13,13 @@
         <maven.compiler.source>10</maven.compiler.source>
         <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler.release>10</maven.compiler.release>
+        <maven.dependency.version>2.8</maven.dependency.version>
         <openjfx.version>11</openjfx.version>
         <netty.version>4.1.25.Final</netty.version>
         <slf4j.version>1.8.0-beta2</slf4j.version>
         <bouncycastle.version>1.55</bouncycastle.version>
+        <mainClass>net.dongliu.proxy.Main</mainClass>
+        <mainModuleName>net.dongliu.proxy</mainModuleName>
     </properties>
 
     <dependencies>
@@ -152,7 +155,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.3</version>
+                <version>${maven.dependency.version}</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -169,6 +172,31 @@
                     <overWriteSnapshots>false</overWriteSnapshots>
                     <overWriteIfNewer>true</overWriteIfNewer>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven.dependency.version}</version>
+                <executions>
+                    <execution>
+                        <id>copy-artifact</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>${project.packaging}</type>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.moditect</groupId>
@@ -343,72 +371,88 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- just call javapackager directly via maven exec plugin -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.3.2</version>
-                <executions>
-                    <execution>
-                        <id>fx-createjar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>javapackager</executable>
-                            <arguments>
-                                <argument>-createjar</argument>
-                                <argument>-appclass</argument>
-                                <argument>net.dongliu.proxy.Main</argument>
-                                <argument>-classpath</argument>
-                                <argument>./*</argument>
-                                <argument>-srcdir</argument>
-                                <argument>${project.build.outputDirectory}/</argument>
-                                <argument>-outdir</argument>
-                                <argument>${project.build.directory}/libs</argument>
-                                <argument>-outfile</argument>
-                                <argument>${project.build.finalName}.jar</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>fx-deploy</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>javapackager</executable>
-                            <arguments>
-                                <argument>-deploy</argument>
-                                <argument>-name</argument>
-                                <argument>${project.name}</argument>
-                                <argument>-title</argument>
-                                <argument>${project.name}</argument>
-                                <argument>-vendor</argument>
-                                <argument>hsiafan</argument>
-                                <argument>--module-path</argument>
-                                <argument>${project.build.directory}/libs</argument>
-                                <argument>--module</argument>
-                                <argument>net.dongliu.proxy/net.dongliu.proxy.Main</argument>
-                                <argument>-outdir</argument>
-                                <argument>${project.build.directory}</argument>
-                                <argument>-outfile</argument>
-                                <argument>${project.name}</argument>
-                                <argument>-native</argument>
-                                <argument>image</argument>
-                                <argument>-nosign</argument>
-                                <argument>-BdropinResourcesRoot=${basedir}/src/main/deploy</argument>
-                                <argument>-BappVersion=${project.version}</argument>
-                                <argument>-BjlinkOptions=strip-debug &#xD;&#xA; compress=1</argument>
-                                <argument>-Bverbose=true</argument>
-                                <argument>-Bidentifier=net.dongliu.proxy</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>jlink</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.3.2</version>
+                        <executions>
+                            <execution>
+                                <id>jlink</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>jlink</executable>
+                                    <arguments>
+                                        <argument>--add-modules</argument>
+                                        <argument>${mainModuleName},org.slf4j.simple</argument>
+                                        <argument>--module-path</argument>
+                                        <argument>${project.build.directory}/libs</argument>
+                                        <argument>--output</argument>
+                                        <argument>${project.build.directory}/${project.artifactId}</argument>
+                                        <argument>--launcher</argument>
+                                        <argument>monkey-proxy=${mainModuleName}/${mainClass}</argument>
+                                        <argument>--compress</argument>
+                                        <argument>1</argument>
+                                        <argument>--strip-debug</argument>
+                                        <argument>--ignore-signing-information</argument>
+                                        <argument>--no-header-files</argument>
+                                        <argument>--no-man-pages</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jpackager</id>
+            <build>
+                <plugins>
+                    <!-- just call jpackager directly via maven exec plugin -->
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.3.2</version>
+                        <executions>
+                            <execution>
+                                <id>jpackager</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>/Users/clear/jdk/jdk.packager/jpackager</executable>
+                                    <arguments>
+                                        <argument>create-image</argument>
+                                        <argument>--class</argument>
+                                        <argument>${mainClass}</argument>
+                                        <argument>--input</argument>
+                                        <argument>${project.build.directory}/libs</argument>
+                                        <argument>--output</argument>
+                                        <argument>${project.build.directory}</argument>
+                                        <argument>-outfile</argument>
+                                        <argument>${project.build.finalName}.jar</argument>
+                                        <argument>--name</argument>
+                                        <argument>${project.name}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
